--- a/index.html
+++ b/index.html
@@ -197,11 +197,16 @@
 
           <hr>
 
+          <center>
+            <object data="deadlift fail .mp4" width="400" height="300"></object> 
+          </center>
+
+
           
           <img src="deadlift.png" alt="deadlift struggle" width="400px" height="400px" >
 
           <div class="box">
-          <center> <h3> Train with us to not struggle like him </h3></center>
+          <center> <h3> Train with us to not struggle like them </h3></center>
           </div>
 
 <br>
