--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
   from {background-color: red;}
   to {background-color: yellow;}
 }
+                             
+@media (max-width:500px){
+  
+  img {
+  max-width: 100%;
+  height: auto;
+}
 
+}
                         </style>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
