--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
                         color: navy;
                         text-decoration: none;
                         }
-
-                        }
                         
                         
                         h2 {
@@ -79,7 +77,10 @@
   max-width: 100%;
   height: auto;
 }
-
+video {
+  max-width: 100%;
+  height: auto;
+}
 }
                         </style>
 
