--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@ video {
     <p align="justify" style="color: black; font-family: Impact, Charcoal, sans-serif; font-size: 20px;"> Here, at Spartan Powerhouse Gym, we take great pride in our clients' improvement. We make it a point to ensure that our client's progress is applauded. Here is a video of one of our client deadlifting 125 kgs within just one year of starting to deadlift. Come and train at one of our gyms and we will give guarantee that you will be in the best physical conditioning of your life </p>
     <br>
 
-    <center> <embed type="video/webm" src="deadlift.m4v" width="850" height="600"> </center>
+    <center> <video width="800" height="500" controls>
+         <source src="deadlift.m4v" type="video/mp4">
+          <source src="deadlift.m4v" type="video/ogg">
+         </video> </center>
 
       <br>
 
