--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ video {
           <a class="nav-link" href="#" style="font-size: 25px;">GET STARTED</a>
         </li>    
         <li class="nav-item">
-          <a class="nav-link" href="#" style="font-size: 25px;">FIND US</a>
+          <a class="nav-link" href="location.xml" style="font-size: 25px;">FIND US</a>
         </li>    
       </ul>
     </div>  
